Removes test timeout
Signed-off-by: Christopher Rogers <chrissrogers@gmail.com>

--- a/test/server/index.jade
+++ b/test/server/index.jade
@@ -7,7 +7,8 @@ html
     script(src='/test/server/sinon.js')
     script(src='/test/server/mocha.js')
     script.
-      mocha.setup({ ui: 'bdd' })
+      mocha.setup({ ui: 'bdd' });
+      mocha.timeout(0);
     script(src='/test/build.js')
   body
     #mocha
